--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
 		</head>
 		<body>
 			<nav>
+				<div class="logo">
+					<img src="/css/img/logo.png" alt="CodingCooker">
+				</div>
+
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
