--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,18 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+img {
+    height: 100px;
+    width: auto;
+}
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
