--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 		</head>
 		<body>
 			<nav>
 				<div class="logo">
-					<img src="/css/img/logo.png" alt="CodingCooker">
+					<img src="/assets/img/logo.png" alt="CodingCooker">
 				</div>
 
 	    		<ul>
