--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,22 @@
+html {
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     margin: 30px auto;
     width: 90%;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    //overflow-y: scroll;
 }
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex: 0 0 100px;
 }
 
 img {
@@ -41,8 +51,10 @@ p {
     color: #333;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    //border-top: 1px solid #d5d5d5;
     font-size: .8em;
+    padding: 2px 16px;
+    flex: 0 0 100px;
 }
 
 ul.posts { 
@@ -52,4 +64,46 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+    flex: 1;
+    display: flex;
+    section {
+        border: 1px solid black;
+        display: flex;
+        width: 100%;
+        .card
+            {
+                background: linear-gradient(to left, #E8CBC0 , #636FA4);
+                flex: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .box
+                {
+                    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+                    transition: 0.3s;
+                }
+            }
+
+            .content {
+                //background: lightpink;
+                flex: 1;
+            }
+    }
 }
