--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
+			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 		</head>
@@ -29,5 +30,6 @@
 	        		<li><a href="https://github.com/codingcooker">github.com/codingcooker</a></li>
 				</ul>
 			</footer>
+		<script src="https://use.fontawesome.com/d7a7b893fb.js"></script>
 		</body>
 	</html>
