--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+			<link rel="icon" type="image/png" href="codingcooker.png">
 		</head>
 		<body>
 			<nav>
