--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ body {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: #212121;
+  color: #404040;
   font-family: "Helvetica Neue", "Calibri Light", Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -109,7 +109,6 @@ ul.posts li {
   display: -ms-flexbox;
   display: flex; }
   .container section {
-    border: 1px solid black;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -177,7 +176,46 @@ ul.posts li {
             .container section .box .card .social i.fa-stack-overflow:hover {
               color: #ED780E; }
     .container section .content {
+      margin: 10px;
       -webkit-box-flex: 1;
       -webkit-flex: 1;
           -ms-flex: 1;
-              flex: 1; }
+              flex: 1;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      color: inherit;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+      .container section .content h1 {
+        display: block; }
+      .container section .content h1:after {
+        content: "";
+        display: block;
+        border: 1px solid darkred;
+        width: 100%;
+        margin-top: 10px; }
+  @media (max-width: 700px) {
+    .container section {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+      .container section .content {
+        -webkit-box-flex: 0.6;
+        -webkit-flex: 0.6;
+            -ms-flex: 0.6;
+                flex: 0.6; } }
