--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
+					<li class="icon"><a href="#"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
