--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,234 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    height: 100%;
-    overflow: hidden;
-}
-
-body {
-    margin: 30px auto;
-    width: 90%;
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-
-    //color: #212121;
-    color: #404040;
-    font-family: "Helvetica Neue", "Calibri Light", Roboto, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    letter-spacing: 0.02em;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex: 0 0 100px;
-}
-
-img {
-    height: 100px;
-    width: auto;
-}
-
-nav ul, footer ul {
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline-block;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-    transition: all 0.5s ease;
-}
-a:hover {
-    border-bottom: 1px solid;
-}
-
-nav {
-    li.icon {
-        display: none;
-    }
-}
-
-h1 {
-    font-size: 3em;
-}
-p {
-    font-size: 1.5em;
-    //line-height: 1.4em;
-    color: #333;
-}
-footer {
-    //border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-    padding: 2px 16px;
-    flex: 0 0 100px;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
-}
-
-
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
-    flex: 1;
-    display: flex;
-    section {
-        //border: 1px solid black;
-        display: flex;
-        width: 100%;
-        height: auto;
-        .box
-            {
-                background: linear-gradient(to left, #E8CBC0 , #636FA4);
-                flex: 1;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .card
-                {
-                    background: whitesmoke;
-                    border-radius: 5px;
-                    width: 200px;
-                    img {
-                        display: block;
-                        border-top-left-radius: 5px;
-                        border-top-right-radius: 5px;
-                        width: 100%;
-                        height: auto;
-                    }
-
-                    .card-details{
-                        margin: 5px 0;
-                        text-align: center;
-
-                        h3 {
-                            display: inline-block;
-                            border-bottom: 1px solid lightgrey;
-                        }
-                    }
-
-                    .social {
-                        color: #555;
-                        text-align: center;
-                        font-size: 1.5em;
-                        margin-top: 10px;
-                        i {
-                            margin: .2em;
-                            cursor: pointer;
-                            transition: color 300ms ease;
-                            //transform: translateZ(0);
-
-                            &:hover {
-                                margin-top: -1px;
-                            }
-
-                            &.fa-linkedin:hover{
-                                color: #007bb5;
-                            }
-                            &.fa-twitter:hover{
-                                color: #55acee;
-                            }
-                            &.fa-github:hover{
-                                color: black;
-                            }
-                            &.fa-envelope:hover{
-                                color: #F7B401;
-                            }
-                            &.fa-stack-overflow:hover{
-                                color: #ED780E;
-                            }                                                                                                                
-                        }
-                    }
-                }
-            }
-
-            .content {
-                margin: 10px;
-                flex: 1;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                color: inherit;
-                flex-direction: column;
-                h1 {
-                    display: block;
-                }
-
-                h1:after{
-                    content: "";
-                    display: block;
-                    border: 1px solid darkred;
-                    width: 100%;
-                    margin-top: 10px;
-                }
-            }
-    }
-
-    @media (max-width: 700px) {
-    section {
-      flex-direction: column;  
-      justify-content: space-between;
-
-      .content {
-          flex: 1;
-            }
-
-            .box {
-                flex: 2;
-            }
-        }
-    }
-}
-
-@media (max-width: 700px) {
-nav ul li {
-            display: none;
-        }
-
-        nav li.icon {
-            display: inline-block;
-        }
-
-        img {
-            height: 80px;
-            width: auto;
-        }
-
-        html,body
-        {
-            min-height: 110%;
-            overflow: scroll;
-        }
-
-        footer{
-            flex: none;
-        }
-}
+@import "./base";
+@import "./site";
+@import "./header";
