--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 			<!-- CSS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 			<link rel="stylesheet" href="/assets/dist/css/normalize.css">
-			<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+			<link rel="stylesheet" href="/assets/css/flexboxgrid.min.css" type="text/css" >
 			<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 
 			<!-- Favicon –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -40,7 +40,6 @@
 					</div>
 					<div class="Header-actions">
 						<a href="/">Home</a>
-						<a href="/about">About</a>
 						<a href="/cv">CV</a>
 						<a href="/blog">Blog</a>
 					</div>
