--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -32,7 +32,8 @@
 .Site-content {
   flex: 1 0 auto; /* 2 */
   padding: var(--space) var(--space) 0;
-  width: 100%;
+  width: 70%;
+  margin: auto;
 }
 .Site-content::after {
   content: '\00a0'; /* &nbsp; */
@@ -55,4 +56,66 @@
 }
 .Site-content--full::after {
   content: none;
+}
+
+.box img {
+  display: block;
+  max-width: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.social {
+  color: #555;
+  //text-align: center;
+  font-size: 1.5em;
+
+  i {
+    margin: .2em;
+    cursor: pointer;
+  }
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px;
+
+    .name {
+      margin: 5px 0;
+
+      &:after{
+        content: "";
+        display: block;
+        border: 1px solid #555;
+        width: 30%;
+        margin: 5px auto;
+      }
+    }
+
+    .title {
+      font-size: 0.75em;
+    }
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+@media only screen and (max-width:48em)
+{
+  .Site-content .container-fluid {
+    padding: 0;
+
+    .center-xs {
+      align-items: flex-start;
+      justify-content: flex-start;
+    }
+
+    .social {
+    font-size: 1.25em;
+    }
+  }
 }
