--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -15,6 +15,19 @@
   height: 100%; /* 1, 3 */
 }
 
+.Home-Site {
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* 1, 3 */
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.Site-main {
+  background: linear-gradient(rgba(85, 85, 85, 0.8), rgba(0, 0, 0, 0.3)), url(/assets/img/mypic2.jpg) no-repeat center center fixed;
+  //background-position: center;
+  background-size: cover;
+}
 
 .Site-header,
 .Site-footer {
@@ -118,4 +131,21 @@
     font-size: 1.25em;
     }
   }
+}
+
+.home {
+  color: whitesmoke;
+  //border: 1px solid #fff;
+  //margin: 10em;
+
+  h1 {
+    font-family: 'Fira Sans';
+    font-weight: 300;
+    font-size: 5em;
+    text-transform: uppercase;
+    margin-left: 2em;
+    margin-top: 4.5em;
+    letter-spacing: 0.5em;
+    color: #fff440;
+  } 
 }
