--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,33 @@ strong {
   height: 100%;
   /* 1, 3 */ }
 
+.Home-Site {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  /* 1, 3 */
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+
+.Site-main {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(85, 85, 85, 0.8)), to(rgba(0, 0, 0, 0.3))), url(/assets/img/mypic2.jpg) no-repeat center center fixed;
+  background: -webkit-linear-gradient(rgba(85, 85, 85, 0.8), rgba(0, 0, 0, 0.3)), url(/assets/img/mypic2.jpg) no-repeat center center fixed;
+  background: linear-gradient(rgba(85, 85, 85, 0.8), rgba(0, 0, 0, 0.3)), url(/assets/img/mypic2.jpg) no-repeat center center fixed;
+  background-size: cover; }
+
 .Site-header,
 .Site-footer {
   -webkit-box-flex: 0;
@@ -204,6 +231,18 @@ strong {
               justify-content: flex-start; }
     .Site-content .container-fluid .social {
       font-size: 1.25em; } }
+
+.home {
+  color: whitesmoke; }
+  .home h1 {
+    font-family: 'Fira Sans';
+    font-weight: 300;
+    font-size: 5em;
+    text-transform: uppercase;
+    margin-left: 2em;
+    margin-top: 4.5em;
+    letter-spacing: 0.5em;
+    color: #fff440; }
 
 .Header {
   padding: 1.5em;
